--- a/src/AppBundle/Resources/views/macros.html.twig
+++ b/src/AppBundle/Resources/views/macros.html.twig
@@ -6,6 +6,10 @@
 <a class="card-tip" data-code="{{ card.code }}">{{ card.name }} <i>({{ card.pack.name }})</i></a>
 {% endmacro %}
 
+{% macro card_name_no_link(card) %}
+<a style="color : inherit;" class="card-name card-tip card-preview" data-code="{{ card.code }}">{{ card.name }}</a>
+{% endmacro %}
+
 {% macro decklist_table_row(decklist) %}
 <tr>
 	<td class="decklist-name"><a href="{{ path('decklist_detail', { 'decklist_id': decklist.id, 'decklist_name': decklist.nameCanonical|e('url') }) }}">{{ decklist.name }}</a></td>
