--- a/src/AppBundle/Resources/views/Builder/decks.html.twig
+++ b/src/AppBundle/Resources/views/Builder/decks.html.twig
@@ -68,9 +68,9 @@
 		<td style="width : 30px"><input id="deck_select_{{deck.id}}" type="checkbox"></td>
 		<td class="hidden-xs" style="width : 60px">
 			<label for="deck_select_{{deck.id}}">
-			<div class="deck-list-investigator-image hidden-xs" title="{{ deck.investigator_name }}" style="background-image:url({{ asset('/bundles/cards/'~deck.investigator_code~'.png') }})"></div>
+			<div class="deck-list-investigator-image card-thumbnail-3x card-thumbnail-investigator hidden-xs" title="{{ deck.investigator_name }}" style="background-image:url({{ asset('/bundles/cards/'~deck.investigator_code~'.png') }})"></div>
 			</label>
-			<!-- <img src="{{ asset('/bundles/app/images/cards/'~deck.investigator_code~'.png') }}"> -->
+
 		</td>
 		<td>
 			<a href="{{ path('deck_view',{deck_id:deck.id}) }}" class="deck-name">{{ deck.name }}</a> {{ deck.version }}
