--- a/src/AppBundle/Resources/views/macros.html.twig
+++ b/src/AppBundle/Resources/views/macros.html.twig
@@ -7,7 +7,7 @@
 {% endmacro %}
 
 {% macro card_name_no_link(card) %}
-<a style="color : inherit;" class="card-name card-tip card-preview" data-code="{{ card.code }}">{{ card.name }}</a>
+<a style="color : inherit;" class="card-tip card-preview" data-code="{{ card.code }}">{{ card.name }}</a>
 {% endmacro %}
 
 {% macro decklist_table_row(decklist) %}
