--- a/src/AppBundle/Resources/views/Search/card-back.html.twig
+++ b/src/AppBundle/Resources/views/Search/card-back.html.twig
@@ -6,12 +6,19 @@
 			{% if card.back_name %}
 			<div class="panel-heading border-{{ card.faction_code }} bg-{{ card.faction_code }}">
 				<h3 class="panel-title">
-					{{card.back_name}}
+					{{card.back_name}} - Back
+				</h3>
+  		</div>
+  		{% else %}
+  		<div class="panel-heading border-{{ card.faction_code }} bg-{{ card.faction_code }}">
+				<h3 class="panel-title">
+					{{card.name}} - Back
 				</h3>
   		</div>
   		{% endif %}
 			{% if card.back_flavor or card.back_text %}
   		<div class="panel-body card-content border-{{ card.faction_code }}">
+  			<span class="card-type">{{ card.type_name }}</span>
   			{% if card.type_code == 'agenda' or card.type_code == 'act' %}	
 					{% if card.back_flavor %}
 					<div class="card-flavor small">
