updated search page moved card sets to search page

--- a/src/AppBundle/Resources/views/Builder/tab-pane-build.html.twig
+++ b/src/AppBundle/Resources/views/Builder/tab-pane-build.html.twig
@@ -9,19 +9,18 @@
 		<div class="btn-group">
 			<button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">Options <span class="caret"></span></button>
 			<ul class="dropdown-menu pull-right" id="config-options">
-			    <li><a href="#"><label><input type="checkbox" name="show-unusable"> Show unusable cards</label></a></li>
+				<li><a href="#"><label><input type="checkbox" name="show-unusable"> Show unusable cards</label></a></li>
 				<li><a href="#"><label><input type="checkbox" name="show-only-deck"> Show only used cards</label></a></li>
 				<li><a href="#"><label><input type="radio" name="display-column" value="1"> Display on 1 column</label></a></li>
 				<li><a href="#"><label><input type="radio" name="display-column" value="2"> Display on 2 columns</label></a></li>
 				<li><a href="#"><label><input type="radio" name="display-column" value="3"> Display on 3 columns</label></a></li>
 				<li><a href="#"><label><input type="radio" name="core-set" value="1"> Use 1 Core Set</label></a></li>
 				<li><a href="#"><label><input type="radio" name="core-set" value="2"> Use 2 Core Sets</label></a></li>
-				<li><a href="#"><label><input type="radio" name="core-set" value="3"> Use 3 Core Sets</label></a></li>
 				<li><a href="#"><label><input type="radio" name="show-suggestions" value="0"> Show no suggestion</label></a></li>
 				<li><a href="#"><label><input type="radio" name="show-suggestions" value="3"> Show 3 suggestions</label></a></li>
 				<li><a href="#"><label><input type="radio" name="show-suggestions" value="10"> Show 10 suggestions</label></a></li>
-				<li><a href="#"><label><input type="radio" name="buttons-behavior" value="cumulative"> Faction/type cumulative</label></a></li>
-				<li><a href="#"><label><input type="radio" name="buttons-behavior" value="exclusive"> Faction/type exclusive</label></a></li>
+				<li><a href="#"><label><input type="radio" name="buttons-behavior" value="cumulative"> Class/type cumulative</label></a></li>
+				<li><a href="#"><label><input type="radio" name="buttons-behavior" value="exclusive"> Class/type exclusive</label></a></li>
 			</ul>
 		</div><!-- /.btn-group -->
 	</div><!-- /.col-sm-6 -->
