--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -47,16 +47,9 @@
           <ul class="nav navbar-nav">
             <li><a href="{{ path('decks_list') }}">My Decks</a></li>
             <li><a href="{{ path('decklists_list') }}">Decklists</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Cards <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                <li><a href="{{ path('cards_search') }}">Advanced Search</a></li>
-                <li class="divider"></li>
-              {% for line in cards_data.allsetsdata() %}
-                <li><a href="{{ line['url'] }}">{{ line['label'] }}</a></li>
-              {% endfor %}
-              </ul>
-            </li>
+            <!--<li><a href="{{ path('campaigns_list') }}">My Campaigns</a></li>-->
+             <li><a href="{{ path('cards_search') }}">Cards</a></li>
+            
             {#
             <li class="hidden-sm"><a href="{{ path('card_reviews_list') }}">Reviews</a></li>
             #}
