--- a/app/Resources/TwigBundle/views/Exception/error500.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error500.html.twig
@@ -4,6 +4,6 @@
 
 {% block body %}
 <div class="container">
-    <div class="alert alert-danger" role="alert">The server encountered an error. Please report it to @Alsciende on <a href="https://twitter.com/alsciende">Twitter</a> or <a href="https://www.reddit.com/user/Alsciende/">Reddit</a>.</div>
+    <div class="alert alert-danger" role="alert">The server encountered an error. Please report it to @Kamalisk on <a href="https://twitter.com/kamalisk">Twitter</a> or <a href="https://www.reddit.com/user/kamalisk/">Reddit</a>.</div>
 </div>
 {% endblock %}
