--- a/src/AppBundle/Resources/views/Search/searchform.html.twig
+++ b/src/AppBundle/Resources/views/Search/searchform.html.twig
@@ -156,13 +156,13 @@
 
 		<div class="col-sm-3">
 			<div class="form-group">
-				<label for="x">XP</label>
+				<label for="p">XP</label>
 				<div class="row">
 					<div class="col-xs-5">
-						<select name="xo" id="xo" class="form-control"><option value=":">=</option><option value="<">&lt;</option><option value=">">&gt;</option></select>
+						<select name="po" id="po" class="form-control"><option value=":">=</option><option value="<">&lt;</option><option value=">">&gt;</option></select>
 					</div>
 					<div class="col-xs-7">
-						<input id="x" name="x" value="" class="form-control">
+						<input id="p" name="p" value="" class="form-control">
 					</div>
 				</div>
 			</div>
